[gd_scene load_steps=47 format=2]

[ext_resource path="res://Player/Player3D/Doll3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/StageScene3D/BaseStageScene3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Props/platform.png" type="Texture" id=3]
[ext_resource path="res://Player/StageScene3D/Scenes2/PawJobMutual.gd" type="Script" id=4]

[sub_resource type="AnimationNodeAnimation" id=446]
animation = "CuffedArms-loop"

[sub_resource type="AnimationNodeBlend2" id=447]
filter_enabled = true
filters = [ "Doll3D/Skeleton:Arm.L", "Doll3D/Skeleton:Arm.R", "Doll3D/Skeleton:ForeArm.L", "Doll3D/Skeleton:ForeArm.R", "Doll3D/Skeleton:Hand.L", "Doll3D/Skeleton:Hand.R" ]

[sub_resource type="AnimationNodeAnimation" id=522]
animation = "PawjobMutualFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=523]
animation = "PawjobMutualFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=524]
animation = "PawjobMutualTease_1-loop"

[sub_resource type="AnimationNodeAnimation" id=525]
animation = "PawjobMutual_1-loop"

[sub_resource type="AnimationNodeAnimation" id=526]
animation = "PawjobMutual_1-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=527]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=528]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=529]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=530]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=531]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=532]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=533]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=534]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=535]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=536]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=537]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=538]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=539]
states/PawjobMutualFast_1-loop/node = SubResource( 523 )
states/PawjobMutualFast_1-loop/position = Vector2( 492, 226 )
"states/PawjobMutualFast_1-loop 2/node" = SubResource( 522 )
"states/PawjobMutualFast_1-loop 2/position" = Vector2( 768, 226 )
states/PawjobMutualTease_1-loop/node = SubResource( 524 )
states/PawjobMutualTease_1-loop/position = Vector2( 492, 44 )
states/PawjobMutual_1-loop/node = SubResource( 526 )
states/PawjobMutual_1-loop/position = Vector2( 492, 134 )
"states/PawjobMutual_1-loop 2/node" = SubResource( 525 )
"states/PawjobMutual_1-loop 2/position" = Vector2( 756, 134 )
transitions = [ "PawjobMutualTease_1-loop", "PawjobMutual_1-loop", SubResource( 527 ), "PawjobMutual_1-loop", "PawjobMutualTease_1-loop", SubResource( 528 ), "PawjobMutualTease_1-loop", "PawjobMutual_1-loop 2", SubResource( 529 ), "PawjobMutual_1-loop 2", "PawjobMutualTease_1-loop", SubResource( 530 ), "PawjobMutual_1-loop", "PawjobMutual_1-loop 2", SubResource( 531 ), "PawjobMutual_1-loop 2", "PawjobMutual_1-loop", SubResource( 532 ), "PawjobMutual_1-loop", "PawjobMutualFast_1-loop", SubResource( 533 ), "PawjobMutualFast_1-loop", "PawjobMutual_1-loop", SubResource( 534 ), "PawjobMutualFast_1-loop 2", "PawjobMutualFast_1-loop", SubResource( 535 ), "PawjobMutualFast_1-loop", "PawjobMutualFast_1-loop 2", SubResource( 536 ), "PawjobMutual_1-loop 2", "PawjobMutualFast_1-loop 2", SubResource( 537 ), "PawjobMutualFast_1-loop 2", "PawjobMutual_1-loop 2", SubResource( 538 ) ]
start_node = "PawjobMutualTease_1-loop"

[sub_resource type="AnimationNodeBlendTree" id=540]
graph_offset = Vector2( -348.69, 38.9555 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 539 )
nodes/StateMachine/position = Vector2( 180, 120 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "output", 0, "CuffsBlend", "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=460]

[sub_resource type="AnimationNodeAnimation" id=542]
animation = "PawjobMutualFastRub_2-loop"

[sub_resource type="AnimationNodeAnimation" id=543]
animation = "PawjobMutualFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=544]
animation = "PawjobMutualRub_2-loop"

[sub_resource type="AnimationNodeAnimation" id=545]
animation = "PawjobMutualTease_2-loop"

[sub_resource type="AnimationNodeAnimation" id=546]
animation = "PawjobMutual_2-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=547]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=548]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=549]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=550]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=551]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=552]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=553]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=554]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=555]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=556]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=557]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=558]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=559]
states/PawjobMutualFastRub_2-loop/node = SubResource( 542 )
states/PawjobMutualFastRub_2-loop/position = Vector2( 860, 249 )
states/PawjobMutualFast_2-loop/node = SubResource( 543 )
states/PawjobMutualFast_2-loop/position = Vector2( 555, 249 )
states/PawjobMutualRub_2-loop/node = SubResource( 544 )
states/PawjobMutualRub_2-loop/position = Vector2( 829, 170 )
states/PawjobMutualTease_2-loop/node = SubResource( 545 )
states/PawjobMutualTease_2-loop/position = Vector2( 555, 70 )
states/PawjobMutual_2-loop/node = SubResource( 546 )
states/PawjobMutual_2-loop/position = Vector2( 555, 170 )
transitions = [ "PawjobMutualTease_2-loop", "PawjobMutual_2-loop", SubResource( 547 ), "PawjobMutual_2-loop", "PawjobMutualTease_2-loop", SubResource( 548 ), "PawjobMutual_2-loop", "PawjobMutualFast_2-loop", SubResource( 549 ), "PawjobMutualFast_2-loop", "PawjobMutual_2-loop", SubResource( 550 ), "PawjobMutual_2-loop", "PawjobMutualRub_2-loop", SubResource( 551 ), "PawjobMutualRub_2-loop", "PawjobMutual_2-loop", SubResource( 552 ), "PawjobMutualRub_2-loop", "PawjobMutualFastRub_2-loop", SubResource( 553 ), "PawjobMutualFastRub_2-loop", "PawjobMutualRub_2-loop", SubResource( 554 ), "PawjobMutualFast_2-loop", "PawjobMutualFastRub_2-loop", SubResource( 555 ), "PawjobMutualFastRub_2-loop", "PawjobMutualFast_2-loop", SubResource( 556 ), "PawjobMutualTease_2-loop", "PawjobMutualRub_2-loop", SubResource( 557 ), "PawjobMutualRub_2-loop", "PawjobMutualTease_2-loop", SubResource( 558 ) ]
start_node = "PawjobMutualTease_2-loop"

[sub_resource type="AnimationNodeBlendTree" id=541]
graph_offset = Vector2( -322.532, 74.6842 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 559 )
nodes/StateMachine/position = Vector2( 140, 140 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "output", 0, "CuffsBlend", "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=473]

[node name="PawJobMutual" instance=ExtResource( 2 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 1.45611, 0 )
script = ExtResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.317465, -1.77462 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Doll3D" parent="." index="1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.82732, -0.120824, 0 )

[node name="Doll3D2" parent="." index="2" instance=ExtResource( 1 )]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 1.82732, -0.120824, 0 )

[node name="AnimationTree" type="AnimationTree" parent="." index="3"]
tree_root = SubResource( 540 )
anim_player = NodePath("../Doll3D/DollSkeleton2/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 460 )

[node name="AnimationTree2" type="AnimationTree" parent="." index="4"]
tree_root = SubResource( 541 )
anim_player = NodePath("../Doll3D2/DollSkeleton2/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 473 )

[editable path="Doll3D"]
[editable path="Doll3D/DollSkeleton"]
[editable path="Doll3D/DollSkeleton2"]
[editable path="Doll3D2"]
[editable path="Doll3D2/DollSkeleton"]
[editable path="Doll3D2/DollSkeleton2"]
